Fixing some more info for the customer
Fixing some more info to look like customers APP

--- a/app/src/main/res/values/demo_strings.xml
+++ b/app/src/main/res/values/demo_strings.xml
@@ -83,7 +83,7 @@
     <string name="em_server_set_im_port_empty_hint">Set the IM port number</string>
     <string name="em_server_set_rest_server_empty_hint">Set the RESTful server address</string>
 
-    <string name="em_empty_layout_content">Find Yourself, Be Yourself</string>
+    <string name="em_empty_layout_content">We enable excellence by empowering mobile workforces</string>
 
     <string name="were_mentioned">[@Mentioning me]</string>
     <string name="were_not_send_msg">[Draft]</string>
